make Receiver task buffers of variable size with template parameter

--- a/TestRunner/makefile
+++ b/TestRunner/makefile
@@ -70,6 +70,7 @@ TEST_FILES = TestArrayList.cpp \
 			 TestSGP4.cpp \
 			 TestSGP4PositionTracker.cpp \
 			 TestSGP4TLE.cpp \
+			 TestSingleSlotBuffer.cpp \
 			 TestSubscriptionManager.cpp \
 			 TestTask.cpp \
 			 TestTaskBlinkLED.cpp \
